--- a/API/package.json
+++ b/API/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "moment": "^2.24.0",
-    "puppeteer": "^1.20.0"
+    "puppeteer": "^1.20.0",
+    "puppeteer-core": "^4.0.0"
   }
 }
